--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "The iReporter is an App that helps to send Intervention and Red-flag reports",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "heroku-postbuild": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "webpack-dev-server --open --config webpack.config.js --env.NODE_ENV=local",
     "build": "webpack --config webpack.config.js --env.production"
@@ -37,6 +39,7 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
