--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
     "mini-css-extract-plugin": "^0.6.0",
+    "moxios": "^0.4.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
