--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "jest": "^24.7.1",
     "mini-css-extract-plugin": "^0.6.0",
     "moxios": "^0.4.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
@@ -77,6 +77,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0"
   }
 }
